use virtual thread to read process output